[gd_scene load_steps=17 format=4 uid="uid://c2bso81u5xov"]

[ext_resource type="Script" uid="uid://buo0k0a1ucb80" path="res://scripts/game/controller.gd" id="1_7gny6"]
[ext_resource type="PackedScene" uid="uid://c33juruhhvftm" path="res://scenes/gui.tscn" id="2_2os1m"]
[ext_resource type="PackedScene" uid="uid://m30priism7yw" path="res://scenes/levels/level_2.tscn" id="2_dnkej"]
[ext_resource type="Script" uid="uid://pjnf8tkpi0ks" path="res://scripts/game/gui.gd" id="3_1s4pk"]
[ext_resource type="PackedScene" uid="uid://c5jeh6aawd8mg" path="res://scenes/sub_viewport.tscn" id="4_go7sj"]
[ext_resource type="Theme" uid="uid://u4e86n2ats8n" path="res://assets/themes/menu.tres" id="5_mm8aj"]
[ext_resource type="Texture2D" uid="uid://yuoce8fhr0w0" path="res://assets/isometric-sandbox-sheet.png" id="6_x2xxo"]
[ext_resource type="Texture2D" uid="uid://kum6enib4nis" path="res://assets/object_sprites/source_1.png" id="7_2cbcq"]
[ext_resource type="Script" uid="uid://dn6ueyc8url7j" path="res://scripts/game/multi_source.gd" id="8_isj1j"]
[ext_resource type="Script" uid="uid://nsybol5vh4m7" path="res://scripts/game/filter.gd" id="10_tr1x6"]
[ext_resource type="Texture2D" uid="uid://bsjkegad250wb" path="res://assets/object_sprites/sensor_1.png" id="11_d5akn"]
[ext_resource type="Script" uid="uid://4kueu8k0s2jv" path="res://scripts/game/sensor.gd" id="12_wbtxt"]
[ext_resource type="Script" uid="uid://ccipymiuceyxj" path="res://scripts/game/camera.gd" id="13_x2fux"]
[ext_resource type="Texture2D" uid="uid://dwyuvwo1i6kwn" path="res://assets/object_sprites/filter_1_3.png" id="15_7nomh"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_e2o6t"]
texture = ExtResource("6_x2xxo")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:1/0 = 0
0:2/0 = 0
0:3/0 = 0
1:0/0 = 0
2:0/0 = 0
3:1/0 = 0
1:1/0 = 0
2:1/0 = 0
2:2/0 = 0
3:2/0 = 0
3:3/0 = 0
4:3/0 = 0
3:0/0 = 0
4:0/0 = 0
4:1/0 = 0
5:1/0 = 0
5:2/0 = 0
5:0/0 = 0
4:2/0 = 0
1:2/0 = 0
0:4/0 = 0
1:3/0 = 0
1:4/0 = 0
2:3/0 = 0
2:4/0 = 0
0:5/0 = 0
0:6/0 = 0
0:7/0 = 0
1:5/0 = 0
1:6/0 = 0
1:7/0 = 0
2:5/0 = 0
2:6/0 = 0
2:7/0 = 0
3:4/0 = 0
3:5/0 = 0
3:6/0 = 0
3:7/0 = 0
4:4/0 = 0
4:5/0 = 0
4:6/0 = 0
4:7/0 = 0
5:3/0 = 0
5:4/0 = 0
5:5/0 = 0
5:6/0 = 0
5:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0

[sub_resource type="TileSet" id="TileSet_feb5d"]
tile_shape = 1
tile_layout = 5
tile_offset_axis = 1
tile_size = Vector2i(32, 16)
sources/0 = SubResource("TileSetAtlasSource_e2o6t")

[node name="Level2" type="Node2D"]
script = ExtResource("1_7gny6")
next_level = ExtResource("2_dnkej")

[node name="GUI" parent="." instance=ExtResource("2_2os1m")]
unique_name_in_owner = true
visible = false
script = ExtResource("3_1s4pk")

[node name="Tutorial" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="Tutorial"]
offset_left = 16.0
offset_top = 16.0
offset_right = 572.0
offset_bottom = 137.0
theme = ExtResource("5_mm8aj")
theme_override_font_sizes/font_size = 22
text = "Try hovering on objects and light beams to view their info.
Click and drag to move the view, scroll/+- keys to zoom.
Click the highlighted Polarizing Filter to interact with it.
Change the Polarizing Filters to complete the Goal."

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(160, 90)
zoom = Vector2(3, 3)
script = ExtResource("13_x2fux")

[node name="SubViewport" parent="." instance=ExtResource("4_go7sj")]
unique_name_in_owner = true

[node name="GroundTiles" type="TileMapLayer" parent="."]
unique_name_in_owner = true
y_sort_enabled = true
position = Vector2(160, 96)
tile_map_data = PackedByteArray("AAD8//3/AAAAAAAAAAD8//7/AAAAAAAAAAD8////AAAAAAAAAAD8/wAAAAAAAAAAAAD8/wEAAAAAAAAAAAD8/wIAAAAAAAAAAAD8/wMAAAAAAAAAAAD8/wQAAAAAAAAAAAD9//3/AAAAAAAAAAD9//7/AAAAAAAAAAD9////AAAAAAAAAAD9/wAAAAAAAAAAAAD9/wEAAAAAAAAAAAD9/wIAAAAAAAAAAAD9/wMAAAAAAAAAAAD9/wQAAAAAAAAAAAD+//3/AAAAAAAAAAD+//7/AAAAAAAAAAD+////AAAAAAAAAAD+/wAAAAAAAAAAAAD+/wEAAAAAAAAAAAD+/wIAAAAAAAAAAAD+/wMAAAAAAAAAAAD+/wQAAAAAAAAAAAD///3/AAAAAAAAAAD///7/AAAAAAAAAAD/////AAAAAAAAAAD//wAAAAAAAAAAAAD//wEAAAAAAAAAAAD//wIAAAAAAAAAAAD//wMAAAAAAAAAAAD//wQAAAAAAAAAAAAAAP3/AAAAAAAAAAAAAP7/AAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAABAP3/AAAAAAAAAAABAP7/AAAAAAAAAAABAP//AAAAAAAAAAABAAAAAAAAAAAAAAABAAEAAAAAAAAAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAACAP3/AAAAAAAAAAACAP7/AAAAAAAAAAACAP//AAAAAAAAAAACAAAAAAAAAAAAAAACAAEAAAAAAAAAAAACAAIAAAAAAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAADAP3/AAAAAAAAAAADAP7/AAAAAAAAAAADAP//AAAAAAAAAAADAAAAAAAAAAAAAAADAAEAAAAAAAAAAAADAAIAAAAAAAAAAAADAAMAAAAAAAAAAAADAAQAAAAAAAAAAAD7//z/AAAAAAAAAAD7//3/AAAAAAAAAAD7//7/AAAAAAAAAAD7////AAAAAAAAAAD7/wAAAAAAAAAAAAD7/wEAAAAAAAAAAAD7/wIAAAAAAAAAAAD7/wMAAAAAAAAAAAD7/wQAAAAAAAAAAAD8//z/AAAAAAAAAAD9//z/AAAAAAAAAAD+//z/AAAAAAAAAAD///z/AAAAAAAAAAAAAPz/AAAAAAAAAAABAPz/AAAAAAAAAAACAPz/AAAAAAAAAAADAPz/AAAAAAAAAAA=")
tile_set = SubResource("TileSet_feb5d")

[node name="ObjectTiles" type="TileMapLayer" parent="."]
unique_name_in_owner = true
y_sort_enabled = true
position = Vector2(160, 96)
tile_map_data = PackedByteArray("AAD6//z/AAADAAAAAAD7//z/AAADAAAAAAD8//z/AAADAAAAAAD9//z/AAADAAAAAAD+//z/AAADAAAAAAD///z/AAADAAAAAAAAAPz/AAADAAAAAAABAPz/AAADAAAAAAACAPz/AAADAAAAAAD6//v/AAAAAAAAAAD7//v/AAAAAAAAAAD8//v/AAAAAAAAAAD9//v/AAAAAAAAAAD+//v/AAAAAAAAAAD///v/AAAAAAAAAAABAPv/AAAAAAAAAAAAAPv/AAAAAAAAAAACAPv/AAAAAAAAAAD6/wMAAAAAAAAAAAD7/wMAAAAAAAAAAAD8/wMAAAAAAAAAAAD9/wMAAAAAAAAAAAD+/wMAAAAAAAAAAAD//wMAAAAAAAAAAAAAAAMAAAAAAAAAAAABAAMAAAAAAAAAAAACAAMAAAAAAAAAAAACAAIAAAACAAEAAAA=")
tile_set = SubResource("TileSet_feb5d")

[node name="MultiSource" type="Sprite2D" parent="ObjectTiles"]
position = Vector2(-48, -40)
texture = ExtResource("7_2cbcq")
script = ExtResource("8_isj1j")
intensity_1 = 1
polar_1 = 135
color_1 = 1

[node name="Sensor" type="Sprite2D" parent="ObjectTiles"]
position = Vector2(48, 8)
texture = ExtResource("11_d5akn")
script = ExtResource("12_wbtxt")
min_polar = 80
max_polar = 100
req_1_color = 1
req_1_min_intensity = 0.45

[node name="Filter" type="Sprite2D" parent="ObjectTiles"]
position = Vector2(0, -16)
texture = ExtResource("15_7nomh")
script = ExtResource("10_tr1x6")
metadata/_custom_type_script = "uid://nsybol5vh4m7"
